// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customers reducers clear ticket 1`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": {},
  "customerHistory": {
    "events": [],
    "hasHistory": false,
    "tickets": [],
    "triedLoading": false,
  },
  "items": [],
}
`;

exports[`customers reducers delete customer 1`] = `
Immutable.Map {
  "active": Immutable.Map {},
  "items": Immutable.List [
    Immutable.Map {
      "id": 1,
    },
  ],
  "customerHistory": Immutable.Map {
    "triedLoading": false,
    "hasHistory": false,
    "tickets": Immutable.List [],
    "events": Immutable.List [],
  },
  "_internal": Immutable.Map {
    "loading": Immutable.Map {
      "history": false,
      "active": false,
      "merge": false,
    },
  },
}
`;

exports[`customers reducers fetch customer 1`] = `
{
  "_internal": {
    "loading": {
      "active": true,
      "history": false,
      "merge": false,
    },
  },
  "active": {},
  "customerHistory": {
    "events": [],
    "hasHistory": false,
    "tickets": [],
    "triedLoading": false,
  },
  "items": [],
}
`;

exports[`customers reducers fetch customer 2`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": {
    "id": 1,
  },
  "customerHistory": {
    "events": [],
    "hasHistory": false,
    "tickets": [],
    "triedLoading": false,
  },
  "items": [],
}
`;

exports[`customers reducers fetch customer 3`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": {},
  "customerHistory": {
    "events": [],
    "hasHistory": false,
    "tickets": [],
    "triedLoading": false,
  },
  "items": [],
}
`;

exports[`customers reducers fetch customer history 1`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "history": true,
      "merge": false,
    },
  },
  "active": {},
  "customerHistory": {
    "events": [],
    "hasHistory": false,
    "tickets": [],
    "triedLoading": true,
  },
  "items": [],
}
`;

exports[`customers reducers fetch customer history 2`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": {},
  "customerHistory": {
    "events": [],
    "hasHistory": true,
    "tickets": [
      {
        "created_datetime": "2018-01-01",
        "id": 1,
      },
      {
        "created_datetime": "2018-01-02",
        "id": 2,
      },
      {
        "created_datetime": "2018-01-03",
        "id": 5,
      },
      {
        "created_datetime": "2018-01-04",
        "id": 4,
      },
      {
        "created_datetime": "2018-01-05",
        "id": 3,
      },
    ],
    "triedLoading": true,
  },
  "items": [],
}
`;

exports[`customers reducers fetch customer history 3`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": {},
  "customerHistory": {
    "events": [],
    "hasHistory": false,
    "tickets": [
      {
        "id": 1,
      },
    ],
    "triedLoading": true,
  },
  "items": [],
}
`;

exports[`customers reducers fetch customer history 4`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": {},
  "customerHistory": {
    "events": [],
    "hasHistory": false,
    "tickets": [],
    "triedLoading": true,
  },
  "items": [],
}
`;

exports[`customers reducers merge customers 1`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "history": false,
      "merge": true,
    },
  },
  "active": {},
  "customerHistory": {
    "events": [],
    "hasHistory": false,
    "tickets": [],
    "triedLoading": false,
  },
  "items": [],
}
`;

exports[`customers reducers merge customers 2`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": {
    "id": 1,
    "name": "Alex",
  },
  "customerHistory": {
    "events": [],
    "hasHistory": false,
    "tickets": [],
    "triedLoading": false,
  },
  "items": [],
}
`;

exports[`customers reducers merge customers 3`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": {
    "id": 1,
    "name": "Romain",
  },
  "customerHistory": {
    "events": [],
    "hasHistory": false,
    "tickets": [],
    "triedLoading": false,
  },
  "items": [],
}
`;

exports[`customers reducers should update history on new message 1`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": {},
  "customerHistory": {
    "events": [],
    "hasHistory": false,
    "tickets": [
      {
        "excerpt": "OK",
        "id": 1,
        "messages_count": 1,
        "status": "open",
      },
      {
        "excerpt": "Glad to have helped you!",
        "id": 2,
        "messages_count": 4,
        "status": "open",
      },
    ],
    "triedLoading": false,
  },
  "items": [],
}
`;

exports[`customers reducers should update history ticket on partial update 1`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": {},
  "customerHistory": {
    "events": [],
    "hasHistory": false,
    "tickets": [
      {
        "assignee_user": {
          "name": "New Assignee",
        },
        "excerpt": "OK",
        "id": 1,
        "status": "closed",
        "subject": "New subject",
      },
      {
        "excerpt": "Alright",
        "id": 2,
        "status": "open",
      },
    ],
    "triedLoading": false,
  },
  "items": [],
}
`;

exports[`customers reducers submit customer 1`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": {},
  "customerHistory": {
    "events": [],
    "hasHistory": false,
    "tickets": [],
    "triedLoading": false,
  },
  "items": [],
}
`;

exports[`customers reducers submit customer 2`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": {
    "id": 1,
    "name": "Romain",
  },
  "customerHistory": {
    "events": [],
    "hasHistory": false,
    "tickets": [],
    "triedLoading": false,
  },
  "items": [
    {
      "id": 1,
      "name": "Romain",
    },
  ],
}
`;

exports[`customers reducers submit customer 3`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": {
    "id": 1,
    "name": "Romain",
  },
  "customerHistory": {
    "events": [],
    "hasHistory": false,
    "tickets": [],
    "triedLoading": false,
  },
  "items": [
    {
      "id": 1,
      "name": "Romain",
    },
  ],
}
`;

exports[`customers reducers submit customer 4`] = `
{
  "_internal": {
    "loading": {
      "active": false,
      "history": false,
      "merge": false,
    },
  },
  "active": {},
  "customerHistory": {
    "events": [],
    "hasHistory": false,
    "tickets": [],
    "triedLoading": false,
  },
  "items": [],
}
`;
